# japan-finance-codes

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/japan_finance_codes/: __init__.py  _cli.py  _registry.py  _snapshot.py
tests/: conftest.py  test_cli.py  test_registry.py  test_snapshot.py
