[project]
name = "japan-finance-codes"
version = "0.2.0"
description = "Unified company ID registry for Japanese financial data (EDINET, TDnet, yfinance)"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
keywords = ["japan", "finance", "edinet", "securities-code", "corporate-number"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
refresh = ["edinet-mcp>=0.6.3"]
dev = [
    "japan-finance-codes[refresh]",
    "pytest>=9.0",
    "pytest-cov>=6.0",
    "pytest-asyncio>=1.3",
    "mypy>=1.0",
    "ruff>=0.4",
]

[project.scripts]
japan-finance-codes = "japan_finance_codes._cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [".env", ".env.*", ".claude/", ".github/"]

[tool.hatch.build.targets.wheel]
packages = ["src/japan_finance_codes"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH", "RUF"]
ignore = ["RUF001", "RUF002"]

[tool.ruff.lint.isort]
known-first-party = ["japan_finance_codes"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["japan_finance_codes"]
mypy_path = ["src"]
